--- a/anygrate/test/test_mapping.yml
+++ b/anygrate/test/test_mapping.yml
@@ -1,7 +1,11 @@
 base:
+    # define the 'login' column as a discriminator to recognize values existing in the target res_users
+    res_users.__discriminator__:
+        - login
     res_users.id:
         # this allows to link the new partner with the existing user
-        res_users.partner_id:
+        res_users.partner_id: __copy__
+        # define a function body to use for this column mapping
         res_partner.id: |
             i = newid('res_partner')
             target_rows['res_users']['partner_id'] = i
@@ -11,28 +15,35 @@ base:
         res_users.name: return source_row['login']
         res_partner.name: return source_row['login']
     res_users.name:
-        res_partner.name:
-        res_users.name:
+        res_partner.name: __copy__
+        res_users.name: __copy__
     res_users.partner_id:
         res_partner.id: return source_row['partner_id']
     res_users.address_id:
         res_partner.id: return source_row['address_id']
+    # this means : add a column with a default value, without specifying a source column
+    res_users._:
+        res_users.foobar: return 'foobar'
 
+    res_partner.__discriminator__:
+        - name
     res_partner.id:
-        res_partner.id:
+        res_partner.id: __copy__
     res_partner.address_id:
         res_partner.id: return source_row['partner_id']
     res_partner.date:
-        res_partner.login_date:
+        res_partner.login_date: __copy__
     res_partner.name:
-        res_partner.name:
+        res_partner.name: __copy__
 
     res_partner_address.id:
-        res_partner.id:
+        res_partner.id: __copy__
     res_partner_address.name:
-        res_partner.name:
+        res_partner.name: __copy__
     res_partner_address.partner_id:
-        res_partner.parent_id:
+        res_partner.parent_id: __copy__
+    # This means : don't migrate this column
+    res_partner_address.street2: __forget__
 mail:
     res_users.login:
         mail_alias.alias: return source_row['login']
