--- a/anygrate/mappings/openerp6.1-openerp7.0.yml
+++ b/anygrate/mappings/openerp6.1-openerp7.0.yml
@@ -1,11 +1,19 @@
 base:
     res_groups.*:
+    res_groups.__discriminator__:
+        - name
+
     res_partner_title.*:
-    res_users.*:
-    res_partner.*:
+    res_partner_title.__discriminator__:
+        - name
     res_country.*:
+    res_country.__discriminator__:
+        - name
 
     # Users
+    res_users.*:
+    res_users.__discriminator__:
+        - login
     res_users.id:
         res_users.id:
     res_users.context_lang:
@@ -24,17 +32,14 @@ base:
     res_users.email: False
     res_users.menu_tips: False
     res_users.term_id: False
-    
     res_users.user_email:
         res_partner.email:
     res_users.name:
         res_partner.name:
     res_users.active:
         res_partner.active:
-
     res_users.company_id:
         res_partner.company_id:
-
     res_users.id:
         res_users.id:
         res_users.partner_id:
@@ -51,11 +56,13 @@ base:
         res_users.date:
 
     # Partners
+    res_partner.*:
+    res_partner.__discriminator__:
+        - name
     res_partner.allow_refund: False
     res_partner.producer: False
     res_partner_address.email:
         res_partner.email:
-
     res_partner.id:
         res_partner.id:
         #adding the new fields with default value
@@ -70,9 +77,7 @@ base:
     res_users.context_tz:
         res_partner.tz:
 
-
     # address
-
     res_partner_address.id:
         res_partner.id: return newid('res_partner')
         res_partner.notification_email_send: return 'comment'
@@ -101,6 +106,9 @@ base:
         res_partner.name: return source_row['name'] or source_row['street'] or source_row['city'] or 'noname'
     res_partner_address.partner_id:
         res_partner.parent_id:
+
+    res_company.__discriminator__:
+        - name
     res_company.logo:
         res_company.logo_web:
     res_company.rml_footer1:
@@ -115,12 +123,15 @@ base:
     res_partner_category_rel.*:
     res_groups_implied_rel.*:
 
+
 # Module mail
 mail:
     mail.*:
+
     ir_ui_menu.mail_group_id:
         ir_ui_menu.mail_group_id:
         mail_group.mail_group_ids:
+
     mail_alias.alias_defaults:
         mail_alias.alias_defaults: # new (text) required: required, req_default: {}
     mail_alias.id:
@@ -134,6 +145,7 @@ mail:
     mail_alias.alias_user_id:  
         mail_alias.alias_user_id:
         res_users.alias_user_ids:
+
     mail_followers.partner_id:
         mail_followers.partner_id:
         res_partner.partner_ids:
@@ -145,6 +157,7 @@ mail:
     mail_followers.subtype_ids:
         mail_followers.subtype_ids:
         mail_message_subtype.subtype_ids:
+
     mail_group.id:
         mail_group.id:
         mail_group._inherits:
@@ -169,6 +182,7 @@ mail:
         mail_group.name:        # required
     mail_group.public:
         mail_group.public: return 'groups'     # new, required, selection_keys: ['groups', 'private', 'public']
+
     mail_mail.id:
         mail_mail.id:
         mail_mail._inherits: return false      # new, false
@@ -231,6 +245,7 @@ mail:
         mail_message_subtype.default:   # new, boolean
         mail_message_subtype.name:      # new, required
         mail_message_subtype.res_model: # new, char
+
     mail_notification.message_id:
         mail_notification.message_id:
         mail_notification.read:         # new, boolean
@@ -246,17 +261,20 @@ mail:
         mail_message.message_id:
     res_partner.notification_email_send:
         res_partner.notification_email_send:    # new required: required, selection_keys: ['all', 'comment', 'email', 'none']
+
     res_users._inherits:
         res_users._inherits:            # new mode: modify   (False) A verifier
     res_users.alias_id:
         res_users.alias_id:
         mail_alais.alias_id: 
-    res_users.login:
+    res_users._:
         mail_alias.alias_name: return source_row['login']
 
 # Module account 
 account:
     account_account.*:
+    account_account.__discriminator__:
+        - name
     account_bank_statement.*:
     account_bank_statement.closing_details_ids:
         #account_bank_statement.closing_details_ids:
@@ -278,8 +296,8 @@ account:
     account_cashbox_line.starting_id: False
     account_cashbox_line.id:
         account_cashbox_line.id:
-        account_cashbox_line.number_closing:
-        account_cashbox_line.number_opening:
+        #account_cashbox_line.number_closing:
+        #account_cashbox_line.number_opening:
     
     account_chart_template.*:
     account_chart_template.property_reserve_and_surplus_account: False
@@ -343,8 +361,9 @@ account:
     account_tax.account_analytic_paid_id:
         account_analytic_account.account_analytic_paid_ids:
         
-    res_company.expects_chart_of_accounts: True # car on suppose que le plan comptable est déjà installé
-    res_company.tax_calculation_rounding_method: return 'round_per_line'
+    res_company._:
+        res_company.expects_chart_of_accounts: return True # car on suppose que le plan comptable est déjà installé
+        res_company.tax_calculation_rounding_method: return 'round_per_line'
     
     account_account_type.*:
     account_account_type.name:
@@ -354,9 +373,11 @@ account:
     account_journal_view.view_id: False
     account_journal_column.*:
 
+
 # Module account_accountant
 account_accountant:
     account_accountant.*:
+
 
 # Module account_analytic_analysis
 account_analytic_analysis:
@@ -368,17 +389,21 @@ account_analytic_analysis:
         account_analytic_account.hours_qtt_est:    #new: float
         account_analytic_account.invoice_on_timesheets:    #new: boolean
 
+
 # Module account_analytic_default
 account_analytic_default:
     account_analytic_default.*:
+
 
 # Module account_analytic_plans
 account_analytic_plans:
     account_analytic_plans.*:
 
+
 # Module account_anglo_saxon
 account_anglo_saxon:
     account_anglo_saxon.*:
+
 
 # Module account_asset
 account_asset:
@@ -387,28 +412,34 @@ account_asset:
     account_asset_depreciation_line.depreciation_date:
         account_asset_depreciation_line.depreciation_date: #change type char to date
 
+
 # Module account_bank_statement_extensions
 account_bank_statement_extensions:
     account_bank_statement_extensions.*:
     account_bank_statement_line.*:
     account_bank_statement_line.journal_id:
         account.account_bank_statement_extensions:
+
         
 # Module account_budget
 account_budget:
     account_budget.*:
+
     
 # Module account_cancel
 account_cancel:
     account_cancel.*:
+
   
 # Module account_chart
 account_chart:
     account_chart.*:
+
   
 # Module account_check_writing
 account_check_writing:
     account_check_writing.*:
+
  
 # Module account_followup
 account_followup:
@@ -438,18 +469,22 @@ account_followup:
     res_partner.unreconciled_aml_ids:
         account_move_line.unreconciled_aml_id:
     
+
 # Module account_payment
 account_payment:
     account_payment.*: 
   
+
 # Module account_sequence
 account_sequence:
     account_sequence.*: 
   
+
 # Module account_test
 account_test:
     account_test.*:
   
+
 # Module account_voucher
 account_voucher:
     account_voucher.*:
@@ -457,6 +492,7 @@ account_voucher:
     account_voucher.message_ids:
         mail_message.message_id:
  
+
 # Module analytic
 analytic:
     analytic.*:
@@ -469,8 +505,10 @@ analytic:
         mail_message.message_id:   
     account_analytic_account.template_id:
         account_analytic_account.template_ids:
-    account_analytic_account.type: return 'normal' #now required, default = normal
+    account_analytic_account._:
+        account_analytic_account.type: return 'normal' #now required, default = normal
   
+
 # Module analytic_contract_hr_expense
 analytic_contract_hr_expense:
     analytic_contract_hr_expense.*:
@@ -478,6 +516,7 @@ analytic_contract_hr_expense:
         account_analytic_account.id:
         account_analytic_account.charge_expenses:   # new, boolean
         account_analytic_account.est_expenses:    # new, float
+
   
 # Module analytic_user_function
 analytic_user_function:
@@ -485,6 +524,7 @@ analytic_user_function:
     analytic_user_funct_grid.id:
         analytic_user_funct_grid.id:
         analytic_user_funct_grid.price:     #NEW required: required (float)
+
   
 # Module sale
 sale:
@@ -563,6 +603,7 @@ sale:
         stock_picking.sale_id:
         sale_stock.sale_ids:
         
+
 # Module stock
 stock:
     stock.*:
@@ -672,6 +713,7 @@ stock:
         stock_picking_in.company_id:
         res_company.company_ids:
 
+
 # module point_of_sale
 point_of_sale:    
     point_of_sale.*:
@@ -740,6 +782,7 @@ point_of_sale:
     account_journal.auto_cash: False    # DEL
     account_journal.check_dtls: False   # DEL
 
+
 # module product
 product:
     product.*:
@@ -754,6 +797,7 @@ product:
 # module edi
 edi:
     edi.*:
+
     
 # module purchase
 purchase:
@@ -793,13 +837,3 @@ purchase:
         stock_picking_in.purchase_id: 
         purchase_order.purchase_id: 
 
-
-    
-    
-    
-    
-    
-    
-    
-    
-    
