--- a/anygrate/mappings/openerp6.1-openerp7.0.yml
+++ b/anygrate/mappings/openerp6.1-openerp7.0.yml
@@ -26,7 +26,7 @@ base:
         res_users.alias_id: return ' '
         res_users.login_date: return ' '
         res_users.lang: return ' '
-        res_users.active: return 't'
+        res_users.active: return True
         res_partner.lang:
     res_users.date: False
     res_users.email: False
@@ -65,15 +65,8 @@ base:
         res_partner.email:
     res_partner.id:
         res_partner.id:
-        #adding the new fields with default value
-        res_partner.notification_email_send: return 'comment'
-        res_partner.section_id: return ' ' 
-        res_partner.is_company: return 'f' # make a function which finds the value in the target database
-        #res_partner.tz: return ' '    # Example of value: Europe/Paris, not required
-        res_partner.use_parent_address: return 't' # make a function which finds the value in the target database
-        res_partner.image_small: return ' '
-        res_partner.image: return ' '
-        res_partner.image_medium: return ' '
+    res_partner.vat_subjected:
+        res_partner.vat_subjected:
     res_users.context_tz:
         res_partner.tz:
 
@@ -86,6 +79,15 @@ base:
     res_partner_address.location_id: False    
     res_partner_address.country_id:
         res_partner.country_id:
+        #adding the new fields with default value
+        res_partner.notification_email_send: return 'comment'
+        res_partner.section_id: return ' ' 
+        res_partner.is_company: return False # make a function which finds the value in the target database
+        #res_partner.tz: return 'Europe/Paris'    # Example of value: Europe/Paris, not required
+        res_partner.use_parent_address: return True # make a function which finds the value in the target database
+        res_partner.image_small: return ' '
+        res_partner.image: return ' '
+        res_partner.image_medium: return ' '
     res_partner_address.fax:
         res_partner.fax:
     res_partner_address.function:
@@ -127,138 +129,31 @@ base:
 # Module mail
 mail:
     mail.*:
-
+    
+    ir_ui_menu.*:
+    
     ir_ui_menu.mail_group_id:
         ir_ui_menu.mail_group_id:
-        mail_group.mail_group_ids:
-
-    mail_alias.alias_defaults:
-        mail_alias.alias_defaults: # new (text) required: required, req_default: {}
-    mail_alias.id:
-        mail_alias.id:
-        mail_alias.alias_force_thread_id: #new, interger
-    mail_alias.alias_model_id:
-        mail_alias.alias_model_id:
-        ir_model.alias_model_ids:  # required
-    mail_alias.alias_name:
-        mail_alias.alias_name:     # required
-    mail_alias.alias_user_id:  
-        mail_alias.alias_user_id:
-        res_users.alias_user_ids:
-
-    mail_followers.partner_id:
-        mail_followers.partner_id:
-        res_partner.partner_ids:
-    mail_followers.id:
-        mail_followers.id:
-        mail_followers.res_id:
-    mail_followers.res_model:
-        mail_followers.res_model:   # required
-    mail_followers.subtype_ids:
-        mail_followers.subtype_ids:
-        mail_message_subtype.subtype_ids:
-
-    mail_group.id:
-        mail_group.id:
-        mail_group._inherits:
-        mail_group.description:     # new, text
-        mail_group.image:           #new, binary
-    mail_group.alias_id:
-        mail_group.alias_id:
-        mail_alias.alias_ids:
-    mail_group.group_ids:
-        mail_group.group_ids:
-        res_groups.group_ids:
-    mail_group.group_public_id:
-        mail_group.group_public_id:
-        res_groups.group_public_id:
-    mail_group.menu_id:
-        mail_group.menu_id:
-        ir_ui_menu.menu_ids:
-    mail_group.message_ids:
-        mail_group.message_ids:
-        mail_message.message_id:
-    mail_group.name:
-        mail_group.name:        # required
-    mail_group.public:
-        mail_group.public: return 'groups'     # new, required, selection_keys: ['groups', 'private', 'public']
-
-    mail_mail.id:
-        mail_mail.id:
-        mail_mail._inherits: return false      # new, false
-        mail_mail.auto_delete:  # new, boolean
-        mail_mail.body_html:    # new, text
-        mail_mail.email_cc:     # new, char
-        mail_mail.email_from:   # new, char
-        mail_mail.email_to:     # new, char
-        mail_mail.notification: # new, boolean
-        mail_mail.references:   # new, text
-        mail_mail.reply_to:     # new, char
-    mail_mail.mail_message_id:
-        mail_mail.mail_message_id:
-        mail_message.mail_message_id:
-    mail_mail.mail_server_id:
-        mail_mail.mail_server_id:
-        ir_mail_server.mail_server_id:
-    mail_mail.state:
-        mail_mail.state:    # selection_keys: ['cancel', 'exception', 'outgoing', 'received', 'sent']
-    mail_message.attachment_ids:
-        mail_message.attachment_ids:
-        ir_attachment.attachment_ids:
-    mail_message.author_id:
-        mail_message.author_id:
-        res_partner.author_ids:
-    mail_message.id:
-        mail_message.id:
-        mail_message.body:          # new, html
-        mail_message.date:          # new, datetim
-        mail_message.email:         # new, char
-        mail_message.message_id:    # new, char
-        mail_message.model:         # new, char
-        mail_message.res_id:        # new, integer
-        mail_message.subject:       # new, char
-    mail_message.child_ids:
-        mail_message.child_ids:
-        mail.message.child_id:
-    mail_message.notification_ids:
-        mail_message.notification_ids:
-        mail_notification.notification_id:
-    mail_message.notified_partner_ids:
-        mail_message.notified_partner_ids:
-        res_partner.notified_partner_id:
+        
+    mail.message.*:
+ 
     mail_message.parent_id:
         mail_message.parent_id:
-        mail_message.parent_ids:
-    mail_message.partner_ids:
-        mail_message.partner_ids:
-        res_partner.partner_id:
     mail_message.subtype_id:
         mail_message.subtype_id:
         mail_message_subtype.subtype_id: 
     mail_message.type:
         mail_message.type:          # new selection_keys: ['comment', 'email', 'notification']
-    mail_message.vote_user_ids:
-        mail_message.vote_user_ids:
-        res_users.vote_user_ids:
-    mail_message_subtype.id:
-        mail_message_subtype.id:
-        mail_message_subtype.default:   # new, boolean
-        mail_message_subtype.name:      # new, required
-        mail_message_subtype.res_model: # new, char
-
+    
+    mail_notification.*:
     mail_notification.message_id:
         mail_notification.message_id:
-        mail_notification.read:         # new, boolean
-        mail_notification.starred:      # new, boolean
-        mail_message.message_ids:
+        mail_notification.read: return True       # new, boolean
+        mail_notification.starred: return True    # new, boolean
     mail_notification.partner_id:
         mail_notification.partner_id:
-        res_partner.partner_ids:
     res_partner.emails:
         res_partner.emails:             # DEL relation: mail.message
-    res_partner.message_ids:
-        res_partner.message_ids:
-        mail_message.message_id:
     res_partner.notification_email_send:
         res_partner.notification_email_send:    # new required: required, selection_keys: ['all', 'comment', 'email', 'none']
 
@@ -276,28 +171,13 @@ account:
     account_account.__discriminator__:
         - name
     account_bank_statement.*:
-    account_bank_statement.closing_details_ids:
-        #account_bank_statement.closing_details_ids:
-        account_cashbox_line.bank_statement_id:
-    account_bank_statement.details_ids:
-        account_cashbox_line.details_id:
-    account_bank_statement.message_ids:
-        mail.message_id:
-    account_bank_statement.opening_details_ids:
-        account_cashbox_line.opening_details_id: #A vérifier
-    account_bank_statement.starting_details_ids: False
-    account_bank_statement.ending_details_ids: False
-       
+  
     account_cashbox_line.*:
-    account_cashbox_line.bank_statement_id:
-        account_bank_statement.bank_statement_ids: # A vérifier
     account_cashbox_line.number: False
     account_cashbox_line.ending_id: False
     account_cashbox_line.starting_id: False
     account_cashbox_line.id:
         account_cashbox_line.id:
-        #account_cashbox_line.number_closing:
-        #account_cashbox_line.number_opening:
     
     account_chart_template.*:
     account_chart_template.property_reserve_and_surplus_account: False
@@ -305,16 +185,12 @@ account:
     account_invoice.*:
     account_invoice.address_contact_id: False
     account_invoice.address_invoice_id: False
-    account_invoice.message_ids:
-        mail.message_id:
     account_invoice.id:
         account_invoice.id:
         account_invoice.send: #new:true or false
         account_invoice.supplier_invoice_number: #new
     
     account_invoice_line.*:
-    account_invoice_line.name:
-        account_invoice_line.name: #cmt changer le type char en text ??
     account_invoice_line.note: False
     
     account_invoice_report.*:
@@ -324,43 +200,21 @@ account:
     account_invoice_report.due_delay: False
     
     account_invoice_tax.*:
-    account_invoice_tax.account_analytic_id:
-        account_analytic_account.account_analytic_ids: # A verifier
-
+    
     account_journal.*:
     account_journal.auto_cash:
         account_journal.auto_cash:
     account_journal.id:
-        account_journal.cash_control: #new : boolean
-        account_journal.with_last_closing_balance: #new: boolean
-    account_journal.cashbox_line_ids:
-        account_journal_cashbox_line.cashbox_line_id:
-    account_journal.internal_account_id:
-        account_account.internal_account_ids: # Pas tres sur
-    account_journal.loss_account_id:
-        account_account.loss_account_ids:   # Pas tres sur
-    account_journal.profit_account_id:
-        account_account.profit_account_ids: # Pas tres sur
+        account_journal.cash_control: return True #new : boolean
+        account_journal.with_last_closing_balance: return True #new: boolean
         
-    account_journal_cashbox_line.*:
-    account_journal_cashbox_line.id:
-        account_journal_cashbox_line.id:
-        account_journal_cashbox_line.pieces: #new : float
-    account_journal_cashbox_line.journal_id:
-        account_journal_cashbox_line.journal_id:
-        account_journal.journal_id:
-    
     account_move_reconcile.*:
     account_move_reconcile.id:
         account_move_reconcile.id:
-        account_move_reconcile.opening_reconciliation: #new
+        account_move_reconcile.opening_reconciliation: return True #new boolean
     
     account_tax.*:
-    account_tax.account_analytic_collected_id:
-        account_analytic_account.account_analytic_collected_ids:
-    account_tax.account_analytic_paid_id:
-        account_analytic_account.account_analytic_paid_ids:
-        
+            
     res_company._:
         res_company.expects_chart_of_accounts: return True # car on suppose que le plan comptable est déjà installé
         res_company.tax_calculation_rounding_method: return 'round_per_line'
@@ -375,6 +229,21 @@ account:
 
     account_move.*:
     account_move_line.*:
+    account_move_bank_reconcile.*:
+    account_move_line_reconcile.*:
+    account_move_line_relation.*:
+    account_move_line_unreconcile_select.*:
+    account_move_line_reconcile_select.*:
+    account_move_reconcile.*:
+    account_move_line.*:               
+    account_move_line_reconcile_writeoff.*:
+
+# Module account_bank_statement_extensions
+account_bank_statement_extensions:
+    account_bank_statement_extensions.*:    
+    account_bank_statement_line.*:
+    account_bank_statement_line.journal_id:     # module is now 'account' ('account_bank_statement_extensions')   
+        account.journal_id:    
 
 
 # Module account_accountant
@@ -528,10 +397,38 @@ analytic_user_function:
         analytic_user_funct_grid.id:
         analytic_user_funct_grid.price:     #NEW required: required (float)
 
-  
+# Module sale_stock
+sale_stock:
+    sale_stock.*:
+    sale_order.*:
+    
+    sale_order.invoice_quantity:
+        sale_order.invoice_quantity: # selection_keys is now '['order']' ('['order', 'procurement']')
+    sale_order.order_policy:
+        sale_order.order_policy:     # NEW selection_keys: ['manual', 'picking', 'prepaid'], mode: modify
+    sale_order.state:                # NEW selection_keys: ['cancel', 'done', 'draft', 'invoice_except', 'manual', 'progress', 'sent'
+        sale_order.state:
+    sale_report.sate:                # NEW selection_keys: ['cancel', 'done', 'draft', 'invoice_except', 'manual', 'progress', 'shipping_except', 
+        sale_report.sate:
+    stock_picking_out.sale_id:       # NEW relation: sale.order
+        stock_picking_out.sale_id:
+        sale_order.sale_ids:
+
+# Module sale_journal
+sale_journal:
+    sale_journal.*:
+    stock_picking_in.invoice_type_id:   # NEW relation: sale_journal.invoice.type
+        stock_picking_in.invoice_type_id:
+        sale_journal.invoice_type_ids:
+    stock_picking_out.invoice_type_id:  # NEW relation: sale_journal.invoice.type
+        stock_picking_out.invoice_type_id:
+        sale_journal.invoice_type_ids:
+        
 # Module sale
 sale:
     sale.*:
+    sale_order.*:
+    
     res_company.security_lead:
         res_company.security_lead:
         sale_stock.security_lead:  
@@ -720,9 +617,6 @@ stock:
 # module point_of_sale
 point_of_sale:    
     point_of_sale.*:
-    account_bank_statement.pos_session_id:
-        account_bank_statement.pos_session_id:
-        pos_session.pos_session_ids:
     account_bank_statement_line.journal_id:
         account_bank_statement_line.journal_id: # DEL mode: modify
         
@@ -736,62 +630,42 @@ point_of_sale:
         pos_config.iface_print_via_proxy:  #new, boolean
         pos_config.iface_self_checkout: #new, boolean
         pos_config.iface_vkeyboard:     #new, boolean
+    pos_config.journal_id:
         pos_config.journal_id:
-            pos_config.journal_id:
-            account_journal.journal_ids:
+        account_journal.journal_ids:
+    pos_config.journal_ids:
         pos_config.journal_ids:
-            pos_config.journal_ids:
-            account_journal.journal_ids:
-        pos_config.name:
-            pos_config.name:    # new required
+        account_journal.journal_ids:
+    pos_config.name:
+        pos_config.name:    # new required
+    pos_config.sequence_id:
         pos_config.sequence_id:
-            pos_config.sequence_id:
-            ir_sequence.sequence_ids:
-        pos_config.session_ids: 
-            pos_config.session_ids:
-            pos_session.session_id:
+        ir_sequence.sequence_ids:
+    pos_config.session_ids: 
+        pos_config.session_ids:
+    pos_config.shop_id:
         pos_config.shop_id:
-            pos_config.shop_id:
-            sale_shop.shop_ids:
-        pos_config.state:
-            pos_config.state: return 'active' #NEW required: required, selection_keys: ['active', 'deprecated', 'inactive']
+        sale_shop.shop_ids:
+    pos_config.state:
+        pos_config.state: return 'active' #NEW required: required, selection_keys: ['active', 'deprecated', 'inactive']
+    pos_order.id:
         pos_order.id:
-            pos_order.id:
-            pos_order.pos_reference:    #new
+        pos_order.pos_reference:    #new
+    pos_order.session_id:
         pos_order.session_id:
-            pos_order.session_id:
-            pos_session.session_id:
-        pos_session.config_id:
-            pos_session.config_id:
-            pos_config.config_ids:
-            pos_session.name:       # new required: required, req_default: /
-            pos_session.start_at:   # new, datetime
-            pos_session.stop_at:    # new, datetime
-            pos_session.state:      # new required: required, selection_keys: ['closed', 'closing_control', 'opened', 'opening_control']
-            product_product.available_in_pos: return true   # new, boolean
-            product_product.to_weight: return true  # new, boolean
-            res_users.ean13:        # new, char
-            res_users.pos_config:
-                res_users.pos_config:   # A VERIFIER  
-        pos_session.user_id:
-            pos_session.user_id:
-            res_users.user_ids:     # 
-        pos_session.order_ids:
-            pos_session.order_ids:
-            pos_order.order_id: 
-        pos_session.statement_ids:
-            pos_session.statement_ids:
-            account_bank_statement.statement_id:
     account_journal.auto_cash: False    # DEL
     account_journal.check_dtls: False   # DEL
 
 
+       
+
 # module product
 product:
     product.*:
+    product_product.*:
     product_product.id:
         product_product.id:
-        product_product.image:  #new, binary
+        product_product.available_in_pos: return True
     product_product.message_ids:
         mail_message.message_ids:
     product_product.product_image: False
