--- a/anygrate/mappings/openerp6.1-openerp7.0.yml
+++ b/anygrate/mappings/openerp6.1-openerp7.0.yml
@@ -63,6 +63,7 @@ base:
         res_partner.tz:
     res_partner._:
         res_partner.is_company: return True
+        res_partner.notification_email_send: return 'comment'
 
     # address
     res_partner_address.id:
@@ -77,7 +78,6 @@ base:
         res_partner.country_id:
         #adding the new fields with default value
         res_partner.notification_email_send: return 'comment'
-        res_partner.section_id: return ' ' 
         res_partner.is_company: return False
         res_partner.use_parent_address: return True # make a function which finds the value in the target database
     res_partner_address.name:
@@ -90,6 +90,7 @@ base:
     res_company.__discriminator__:
         - name
     res_company.*:
+    res_company.stylesheet_id: False
     res_company.logo:
         res_company.logo_web:
     res_company.rml_footer1:
@@ -181,6 +182,22 @@ account:
         res_company.tax_calculation_rounding_method: return 'round_per_line'
 
     account_account_type.*:
+    account_account_type._:
+        account_account_type.report_type: |
+            return {
+                'receivable': 'asset',
+                'view': 'none',
+                'payable': 'liability',
+                'liability': 'liability',
+                'bank': 'asset',
+                'cash': 'asset',
+                'asset': 'asset',
+                'income': 'income',
+                'expense': 'expense',
+                'tax': 'expense',
+                'equity': 'liability',
+                'check': 'asset'
+            }.get(source_row['code'], 'none')
     account_account_type.__discriminator__:
         - name
 
@@ -329,6 +346,8 @@ sale:
 stock:
     stock.*:
     stock_location.*:
+    stock_location.address_id:
+        stock_location.partner_id:
     stock_location.__discriminator__:
         - name
     stock_warehouse.*:
